--- a/hurray.html
+++ b/hurray.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="hurray.css">
 </head>
 
 <body>
     <div class="container">
         <div class="images">
-            <img id="img1" src="Hurray.png" alt="hurray_image">
-            <img id="img2" src="stars.png" alt="stars">
+            <img id="img1" src="images/Hurray.png" alt="hurray_image">
+            <img id="img2" src="images/stars.png" alt="stars">
         </div>
         <div class="conatiner2">
             <div class="win_line">
