--- a/index.html
+++ b/index.html
@@ -4,11 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stone_Paper_Scissor_game</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="images" href="paper.png">
 </head>
 
 <body>
-    <p>hi</p>
+    <div class="container">
+        <div class="container1">
+            <div class="gameline">
+                <p>ROCK PAPER SCISSORS</p>
+            </div>
+            <div class="scores">
+                <div class="score1">
+                    <p>computer <br> score</p>
+                    <h2 id="c_score1">0</h2>
+                </div>
+                <div class="score2">
+                    <p>your <br>score</p>
+                    <h2 id="c_score2">0</h2>
+                </div>
+            </div>
+        </div>
+        <div class="container2">
+            <img src="images/stone.png" alt="stone" id="stone_img">
+            <img src="images/scissor.png" alt="scissor" id="scissor_img">
+            <img src="images/paper.png" alt="paper" id="paper_img">
+        </div>
+        <div class="container3">
+            <div class="rules">
+                <h2>Game Rules</h2>
+                <div class="rules1">
+                    <div class="square_box">
+                        <div class="sq"></div>
+                        <div class="sq"></div>
+                        <div class="sq"></div>
+                        <div class="sq"></div>
+                    </div>
+                    <div class="rules_line">
+                        <p>Rock beats scissors, scissors beat <br> paper, and paper beats rock.</p>
+                        <p>Agree ahead of time whether you’ll <br> count off “rock, paper, scissors,<br> shoot” or just “rock, paper, scissors.”</p>
+                        <p>Use rock, paper, scissors to settle <br>minor decisions or simply play to <br> pass the time</p>
+                        <p>If both players lay down the same<br> hand, each player lays down another <br> hand</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
