--- a/index.html
+++ b/index.html
@@ -30,9 +30,24 @@
             </div>
         </div>
         <div class="container2">
-            <img src="images/stone.png" alt="stone" id="stone_img">
-            <img src="images/scissor.png" alt="scissor" id="scissor_img">
-            <img src="images/paper.png" alt="paper" id="paper_img">
+            <div class="lines">
+                <div class="linea">
+                    <div class="line2"></div>
+                </div>
+                <div class="lineb">
+                    <div class="line3"></div>
+                    <div class="line1"></div>
+                </div>
+            </div>
+            <div class="images">
+                <div class="img1_class">
+                    <img src="images/stone.png" alt="stone" id="stone_img">
+                    <img src="images/scissor.png" alt="scissor" id="scissor_img">
+                </div>
+                <div class="img2_class">
+                    <img src="images/paper.png" alt="paper" id="paper_img">
+                </div>
+            </div>
         </div>
         <div class="container3">
             <div class="rules">
@@ -47,7 +62,8 @@
                     <div class="rules_line">
                         <p>Rock beats scissors, scissors beat <br> paper, and paper beats rock.</p>
                         <p>Agree ahead of time whether you’ll <br> count off “rock, paper, scissors,<br> shoot” or just “rock, paper, scissors.”</p>
-                        <p>Use rock, paper, scissors to settle <br>minor decisions or simply play to <br> pass the time</p>
+                        <p>Use rock, paper, scissors to settle <br>minor decisions or simply play to <br> pass the time
+                        </p>
                         <p>If both players lay down the same<br> hand, each player lays down another <br> hand</p>
                     </div>
                 </div>
