--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                         <p>If both players lay down the same<br> hand, each player lays down another <br> hand</p>
                     </div>
                 </div>
+                <div class="cross">
+                    <p>X</p>
+                </div>
             </div>
         </div>
     </div>
